--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,153 @@ body {
 .weather .weather-desc,
 .col-1 .weather-desc {
   font-weight: 600;
+  text-transform: capitalize;
+}
+
+#theme-btn {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  background: none;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+.card {
+  max-width: 60vw;
+  margin: auto;
+  position: relative;
+  background-color: var(--card-bg);
+  padding: 2% 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 3px;
+  -webkit-box-shadow: 0px 10px 31px 5px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 10px 31px 5px rgba(0, 0, 0, 0.25);
+}
+
+.card .card-header {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  width: 100%;
+  margin: 0.8rem 0;
+}
+
+.card .card-header h3 {
+  margin-bottom: 0.2em;
+  font-size: 1.9rem;
+  line-height: 1.3em;
+  white-space: nowrap;
+  font-weight: 700;
+  color: var(--secondary-color);
+}
+
+.card .card-header h4 {
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: var(--primary-color);
+}
+
+.card .card-cols {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card .card-cols .col-1 {
+  width: 100%;
+  margin: 1rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card .card-cols .col-1 .weather-img {
+  height: 6rem;
+  width: 6rem;
+}
+
+.card .card-cols .col-1 h1 {
+  color: var(--secondary-color);
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+.card .card-cols .col-1 .weather-desc {
+  color: var(--secondary-color);
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.card .card-cols .col-2 {
+  width: 100%;
+  margin: 1rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card .card-cols .col-2 .info {
+  margin: 0.5em 0;
+  padding: 0.3em 0 0.2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 2px solid #ddd;
+}
+
+.card .card-cols .col-2 .info h3 {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #888;
+}
+
+.card .card-cols .col-2 .info h4 {
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--primary-color);
+}
+
+.air-quality-card {
+  margin-top: 2rem;
 }
 
 header {
@@ -138,156 +285,23 @@ main .weather .weather-desc {
 }
 
 section {
-  background-color: var(--bg-color);
+  position: relative;
   padding: 5%;
+  background-color: var(--bg-color);
   -webkit-transition: all 0.5s ease-in;
   transition: all 0.5s ease-in;
 }
 
-.weather-card {
-  max-width: 60vw;
-  margin: auto;
-  position: relative;
-  background-color: var(--card-bg);
-  padding: 2% 10%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 3px;
-  -webkit-box-shadow: 0px 10px 31px 5px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 10px 31px 5px rgba(0, 0, 0, 0.25);
-}
-
-.weather-card #theme-btn {
-  position: absolute;
-  top: 5%;
-  right: 2%;
-  background: none;
-  cursor: pointer;
-  border: none;
-  outline: none;
-}
-
-.weather-card .weather-card-header {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-  width: 100%;
-  margin: 0.8rem 0;
-}
-
-.weather-card .weather-card-header h3 {
-  margin-bottom: 0.2em;
-  font-size: 1.9rem;
-  line-height: 1.3em;
-  white-space: nowrap;
-  font-weight: 700;
-  color: var(--secondary-color);
-}
-
-.weather-card .weather-card-header h4 {
-  font-size: 0.9rem;
-  font-weight: 600;
+.air-quality-card .card-cols .col-1 h1 {
   color: var(--primary-color);
-}
-
-.weather-card .weather-card-header h4 time {
-  color: #888;
-}
-
-.weather-card .card-cols {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.weather-card .card-cols .col-1 {
-  width: 100%;
-  margin: 1rem 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.weather-card .card-cols .col-1 .weather-img {
-  height: 6rem;
-  width: 6rem;
-}
-
-.weather-card .card-cols .col-1 h1 {
-  color: var(--secondary-color);
-  font-size: 2.5rem;
+  font-size: 5rem;
   font-weight: 700;
-  text-align: center;
 }
 
-.weather-card .card-cols .col-1 .weather-desc {
-  color: var(--secondary-color);
-  font-size: 1rem;
-  font-weight: 600;
-}
-
-.weather-card .card-cols .col-2 {
-  width: 100%;
-  margin: 1rem 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.weather-card .card-cols .col-2 .info {
-  margin: 0.5em 0;
-  padding: 0.3em 0 0.2em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  border-bottom: 2px solid #ddd;
-}
-
-.weather-card .card-cols .col-2 .info h3 {
-  font-size: 1.1rem;
-  font-weight: 600;
-  color: #888;
-}
-
-.weather-card .card-cols .col-2 .info h4 {
-  font-size: 1rem;
-  font-weight: 400;
+.air-quality-card .card-cols .col-1 h3 {
   color: var(--primary-color);
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 @media (min-width: 600px) {
