--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -21,5 +21,107 @@ body {
   }
   .weather-desc {
     font-weight: $semi-bold;
+    text-transform: capitalize;
   }
+}
+
+#theme-btn {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  background: none;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+.card {
+  max-width: 60vw;
+  margin: auto;
+  position: relative;
+  background-color: var(--card-bg);
+  padding: 2% 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: $border-radius;
+  box-shadow: 0px 10px 31px 5px rgba(0, 0, 0, 0.25);
+
+  .card-header {
+    grid-row: 1/2;
+    width: 100%;
+    margin: 0.8rem 0;
+
+    h3 {
+      margin-bottom: 0.2em;
+      font-size: 1.9rem;
+      line-height: 1.3em;
+      white-space: nowrap;
+      font-weight: $bold;
+      color: var(--secondary-color);
+    }
+    h4 {
+      font-size: 0.9rem;
+      font-weight: $semi-bold;
+      color: var(--primary-color);
+    }
+  }
+  .card-cols {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .col-1 {
+      width: 100%;
+      margin: 1rem 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .weather-img {
+        height: 6rem;
+        width: 6rem;
+      }
+      h1 {
+        color: var(--secondary-color);
+        font-size: 2.5rem;
+        font-weight: $bold;
+        text-align: center;
+      }
+      .weather-desc {
+        color: var(--secondary-color);
+        font-size: 1rem;
+        font-weight: $semi-bold;
+      }
+    }
+    .col-2 {
+      width: 100%;
+      margin: 1rem 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      .info {
+        margin: 0.5em 0;
+        padding: 0.3em 0 0.2em;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 2px solid #ddd;
+
+        h3 {
+          font-size: 1.1rem;
+          font-weight: $semi-bold;
+          color: #888;
+        }
+        h4 {
+          font-size: 1rem;
+          font-weight: $regular;
+          color: var(--primary-color);
+        }
+      }
+    }
+  }
+}
+
+.air-quality-card {
+  margin-top: 2rem;
 }
