--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,29 @@ body {
   color: var(--primary-color);
 }
 
+.min-max-temp {
+  margin: 0.3rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card-weather-desc .min-max-temp {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
 .air-quality-card {
   margin-top: 2rem;
 }
@@ -242,18 +265,42 @@ main {
 }
 
 main #form {
+  height: 3rem;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+main #form #input,
+main #form #search-btn {
+  font-weight: 400;
+  padding: 0.5em 0.7em;
+  border: none;
+  outline: none;
 }
 
 main #form #input {
-  width: 100%;
-  font-size: 1rem;
+  height: 100%;
+  width: 80%;
   font-family: inherit;
-  font-weight: 400;
+  font-size: 1rem;
   border-radius: 3px;
-  padding: 0.5em 1em;
-  border: none;
-  outline: none;
+}
+
+main #form #search-btn {
+  height: 100%;
+  font-size: 1.4rem;
+  color: #fff;
+  border-radius: 0 3px 3px 0;
+  background-color: var(--primary-color);
+  cursor: pointer;
 }
 
 main .weather {
@@ -282,6 +329,20 @@ main .weather .weather-desc {
   color: #fff;
   font-size: 1.5rem;
   font-weight: 600;
+}
+
+main .weather h5 {
+  color: #fff;
+}
+
+h5 {
+  color: var(--secondary-color);
+  font-size: 0.8rem;
+  font-weight: 700;
+}
+
+h5 span {
+  color: var(--primary-color);
 }
 
 section {
