--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,16 +36,32 @@ main {
   flex-direction: column;
   align-items: center;
   #form {
+    height: 3rem;
     width: 100%;
-    #input {
-      width: 100%;
-      font-size: 1rem;
-      font-family: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    #input,
+    #search-btn {
       font-weight: $regular;
-      border-radius: $border-radius;
-      padding: 0.5em 1em;
+      padding: 0.5em 0.7em;
       border: none;
       outline: none;
+    }
+    #input {
+      height: 100%;
+      width: 80%;
+      font-family: inherit;
+      font-size: 1rem;
+      border-radius: $border-radius;
+    }
+    #search-btn {
+      height: 100%;
+      font-size: 1.4rem;
+      color: #fff;
+      border-radius: 0 $border-radius $border-radius 0;
+      background-color: var(--primary-color);
+      cursor: pointer;
     }
   }
   .weather {
@@ -65,9 +81,19 @@ main {
       font-size: 1.5rem;
       font-weight: $semi-bold;
     }
+    h5 {
+      color: #fff;
+    }
   }
 }
-
+h5 {
+  color: var(--secondary-color);
+  font-size: 0.8rem;
+  font-weight: $bold;
+  span {
+    color: var(--primary-color);
+  }
+}
 section {
   position: relative;
   padding: 5%;
