--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,6 +28,7 @@ header {
   background-image: url('../Images/bg.jpg');
   background-position: center center;
   background-size: cover;
+  position: relative;
 }
 main {
   width: 100%;
@@ -64,6 +65,7 @@ main {
       cursor: pointer;
     }
   }
+
   .weather {
     max-width: 30vw;
     padding: 3rem 0;
@@ -86,6 +88,7 @@ main {
     }
   }
 }
+
 h5 {
   color: var(--secondary-color);
   font-size: 0.8rem;
@@ -94,6 +97,7 @@ h5 {
     color: var(--primary-color);
   }
 }
+
 section {
   position: relative;
   padding: 5%;
