--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -33,6 +33,7 @@ body {
   cursor: pointer;
   border: none;
   outline: none;
+  z-index: 1;
 }
 
 .social-icons {
@@ -57,7 +58,7 @@ body {
 }
 
 .card {
-  max-width: 60vw;
+  // max-width: 60vw;
   margin: auto;
   position: relative;
   background-color: var(--card-bg);
@@ -77,7 +78,7 @@ body {
       margin-bottom: 0.2em;
       font-size: 1.9rem;
       line-height: 1.3em;
-      white-space: nowrap;
+      // white-space: nowrap;
       font-weight: $bold;
       color: var(--secondary-color);
     }
